El HTML de la página principal se genera desde un template

--- a/listas/templates/home.html
+++ b/listas/templates/home.html
@@ -1,3 +1,10 @@
 <html>
-  <title>Listas de tareas</title>
+  <head>
+    <title>Listas de tareas</title>
+  </head>
+  <body>
+    <h1>Listas de tareas</h1>
+    <input id="id_item_nuevo" placeholder="Ingrese una tarea"/>
+    <table id="id_tabla_lista"></table>
+  </body>
 </html>
