--- a/listas/templates/home.html
+++ b/listas/templates/home.html
@@ -9,7 +9,9 @@
       {% csrf_token %}
     </form>
     <table id="id_tabla_lista">
-      <tr><td>1: {{ texto_nuevo_item }}</td></tr>
+      {% for item in items %}
+        <tr><td>{{ forloop.counter }}: {{ item.texto }}</td></tr>
+      {% endfor %}
     </table>
   </body>
 </html>
