View nueva_lista se ocupa de la creación de listas

--- a/listas/templates/home.html
+++ b/listas/templates/home.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Listas de tareas</h1>
-    <form method="POST" action="/">
+    <form method="POST" action="/listas/nueva">
       <input name="texto_item" id="id_item_nuevo" placeholder="Ingrese una tarea"/>
       {% csrf_token %}
     </form>
