--- a/listas/templates/lista.html
+++ b/listas/templates/lista.html
@@ -4,12 +4,12 @@
   </head>
   <body>
     <h1>Listas de tareas</h1>
-    <form method="POST" action="/listas/nueva">
+    <form method="POST" action="/listas/{{ lista.id }}/agregar_item">
       <input name="texto_item" id="id_item_nuevo" placeholder="Ingrese una tarea"/>
       {% csrf_token %}
     </form>
     <table id="id_tabla_lista">
-      {% for item in items %}
+      {% for item in lista.item_set.all %}
         <tr><td>{{ forloop.counter }}: {{ item.texto }}</td></tr>
       {% endfor %}
     </table>
