--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -1,14 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Listas de tareas</title>
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/base.css" rel="stylesheet">
   </head>
   <body>
-    <h1>{% block texto_encabezado %}{% endblock texto_encabezado %}</h1>
-    <form method="POST" action="{% block form_action %}{% endblock form_action%}">
-      <input name="texto_item" id="id_item_nuevo" placeholder="Ingrese una tarea"/>
-      {% csrf_token %}
-    </form>
-    {% block tabla %}
-    {% endblock tabla %}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 jumbotron">
+        <div class="text-center">
+          <h1>{% block texto_encabezado %}{% endblock texto_encabezado %}</h1>
+          <form method="POST"
+                action="{% block form_action %}{% endblock form_action%}">
+            <input name="texto_item"
+                   id="id_item_nuevo" class="form-control input-lg"
+                   placeholder="Ingrese una tarea"/>
+            {% csrf_token %}
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        {% block tabla %}
+        {% endblock tabla %}
+      </div>
+    </div>
+
+  </div>
   </body>
 </html>
