--- a/listas/templates/home.html
+++ b/listas/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block texto_encabezado %}Comenzar una nueva lista de tareas{% endblock texto_encabezado %}
+{% block texto_encabezado %}Comenzar una lista de tareas{% endblock texto_encabezado %}
 
 {% block form_action %}/listas/nueva{% endblock form_action %}
