Refactoring - view lista puede manejar POSTs de nuevos items

--- a/listas/templates/lista.html
+++ b/listas/templates/lista.html
@@ -2,7 +2,7 @@
 
 {% block texto_encabezado %}Tu lista de tareas{% endblock texto_encabezado %}
 
-{% block form_action %}/listas/{{ lista.id }}/agregar_item{% endblock form_action %}
+{% block form_action %}/listas/{{ lista.id }}/{% endblock form_action %}
 
 {% block tabla %}
 <table id="id_tabla_lista" class="table">
