Refactoring: URLs 'duras' eliminadas de templates

--- a/listas/templates/home.html
+++ b/listas/templates/home.html
@@ -2,4 +2,4 @@
 
 {% block texto_encabezado %}Comenzar una lista de tareas{% endblock texto_encabezado %}
 
-{% block form_action %}/listas/nueva{% endblock form_action %}
+{% block form_action %}{% url 'nueva_lista' %}{% endblock form_action %}
