--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -16,11 +16,11 @@
           <h1>{% block texto_encabezado %}{% endblock texto_encabezado %}</h1>
           <form method="POST"
                 action="{% block form_action %}{% endblock form_action%}">
-            {{ form.text }}
+            {{ form.texto }}
             {% csrf_token %}
-            {% if error %}
+            {% if form.errors %}
             <div class="form-group has-error">
-              <span class="help-block">{{ error }}</span>
+              <span class="help-block">{{ form.texto.errors }}</span>
             </div>
             {% endif %}
           </form>
