--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -35,5 +35,12 @@
     </div>
 
   </div>
+  
+  <script src="/static/jquery-3.5.1.min.js"></script>
+  <script src="/static/lista.js"></script>
+  <script>
+    initialize()
+  </script>
+
   </body>
 </html>
