Agregado namespace a funciones javascript

--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -35,11 +35,13 @@
     </div>
 
   </div>
-  
+
   <script src="/static/jquery-3.5.1.min.js"></script>
   <script src="/static/lista.js"></script>
   <script>
-    initialize()
+  $(document).ready(function() {
+    window.superlistas.initialize();
+  });
   </script>
 
   </body>
