--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -10,6 +10,18 @@
   </head>
   <body>
   <div class="container">
+
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Superlistas</a>
+        <form class="navbar-form navbar-right" method="POST" action="#">
+          <span>Ingrese email para entrar:</span>
+          <input class="form-control" name="email" type="text" />
+          {% csrf_token %}
+        </form>
+      </div>
+    </nav>
+
     <div class="row">
       <div class="col-md-6 col-md-offset-3 jumbotron">
         <div class="text-center">
