--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -14,13 +14,34 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Superlistas</a>
-        <form class="navbar-form navbar-right" method="POST" action="#">
+        {% if user.email %}
+        <ul class="nav navbar-nav navbar-right">
+          <li class="navbar-text">Usuario: {{ user.email }}</li>
+          <li><a href="#">Salir</a></li>
+        </ul>
+        {% else %}
+        <form class="navbar-form navbar-right" method="POST"
+              action="{% url 'enviar_email_login' %}">
           <span>Ingrese email para entrar:</span>
           <input class="form-control" name="email" type="text" />
           {% csrf_token %}
         </form>
+        {% endif %}
       </div>
     </nav>
+    {% if messages %}
+    <div class="row">
+      <div class="col-md-8">
+      {% for message in messages %}
+        {% if message.level_tag == 'success' %}
+        <div class="alert alert-success">{{ message }}</div>
+        {% else %}
+        <div class="alert alert-warning">{{ message }}</div>
+        {% endif %}
+      {% endfor %}
+      </div>
+    </div>
+    {% endif %}
 
     <div class="row">
       <div class="col-md-6 col-md-offset-3 jumbotron">
