--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -17,7 +17,7 @@
         {% if user.email %}
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-text">Usuario: {{ user.email }}</li>
-          <li><a href="#">Salir</a></li>
+          <li><a href="{% url 'logout' %}">Salir</a></li>
         </ul>
         {% else %}
         <form class="navbar-form navbar-right" method="POST"
