--- a/listas/templates/base.html
+++ b/listas/templates/base.html
@@ -15,6 +15,9 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Superlistas</a>
         {% if user.email %}
+        <ul class="nav navbar-nav navbar-left">
+          <li><a href="{% url 'mis_listas' user.email %}">Mis listas</a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="navbar-text">Usuario: {{ user.email }}</li>
           <li><a href="{% url 'logout' %}">Salir</a></li>
@@ -47,6 +50,7 @@
       <div class="col-md-6 col-md-offset-3 jumbotron">
         <div class="text-center">
           <h1>{% block texto_encabezado %}{% endblock texto_encabezado %}</h1>
+          {% block form_lista %}
           <form method="POST"
                 action="{% block form_action %}{% endblock form_action%}">
             {{ form.texto }}
@@ -57,6 +61,7 @@
             </div>
             {% endif %}
           </form>
+          {% endblock form_lista%}
         </div>
       </div>
     </div>
@@ -64,6 +69,13 @@
       <div class="col-md-6 col-md-offset-3">
         {% block tabla %}
         {% endblock tabla %}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        {% block cont_extra %}
+        {% endblock cont_extra %}
       </div>
     </div>
 
