--- a/listas/templates/mis_listas.html
+++ b/listas/templates/mis_listas.html
@@ -5,9 +5,9 @@
 {% block form_lista %}{% endblock form_lista %}
 
 {% block cont_extra %}
-<h2>Listas de {{ owner.email }}</h2>
+<h2>Listas de {{ duenio.email }}</h2>
 <ul>
-  {% for lista in owner.list_set.all %}
+  {% for lista in duenio.list_set.all %}
   <li><a href="{{ lista.get_absolute_url }}">{{ lista.nombre }}</a></li>
   {% endfor %}
 </ul>
